@@ -7,6 +7,7 @@ logs
 *.iws
 *.classpath
 .DS_Store
+.ossutil_checkpoint
 *.patch
 ~$*
 node_modules
